...
    private enum Strings {
        static let roundResult = "Результат раунда:"
        static let quizzesCount = "Количество сыгранных квизов:"
        static let record = "Рекорд:"
        static let averageAccuracy = "Средняя точность:"
        static let roundFinishedTitle = "Этот раунд окончен!"
        static let playAgainButton = "Сыграть ещё раз"
    }
    
    // MARK: - Properties
    private weak var viewController: MovieQuizViewControllerProtocol?
    private var questionFactory: QuestionFactoryProtocol?
    private let statisticService: StatisticServiceProtocol
...
